--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="C++기본\00 C++기본.cpp" />
+    <ClCompile Include="..\07 포인터 기본.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
