--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C++기본\00 C++기본.cpp">
+    <ClCompile Include="..\07 포인터 기본.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
