포인터 연산

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\08 포인터 기본2.c" />
+    <ClCompile Include="..\09 포인터 연산.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
