--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\08 포인터 기본2.c">
+    <ClCompile Include="..\09 포인터 연산.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
