--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\12 구조체 포인터.c">
+    <ClCompile Include="18 반복문.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
