--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="18 반복문.c">
+    <ClCompile Include="C++기본\02-01 매크로함수.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
