참조와 포인터 비교

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="02-02 inline 함수.cpp" />
+    <ClCompile Include="02-03 참조.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
