--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,15 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C++기본\02-05.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="C++기본\02-05 함수 오버로딩.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="C++기본\02-05.cpp">
+    <ClCompile Include="C++기본\02-06 string 대입.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
