string 덧붙이기(append)

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C++기본\02-06 string 대입.cpp" />
+    <None Include="02-07 string 덧붙이기%28append%29.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
