--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C++기본\02-06 string 대입.cpp">
+    <None Include="02-07 string 덧붙이기%28append%29.cpp">
       <Filter>소스 파일</Filter>
-    </ClCompile>
+    </None>
   </ItemGroup>
 </Project>
