--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="02-07 string 덧붙이기%28append%29.cpp">
+    <ClCompile Include="02-08 string 비교.cpp">
       <Filter>소스 파일</Filter>
-    </None>
+    </ClCompile>
   </ItemGroup>
 </Project>
