--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="02-09 string 길이.cpp">
+    <ClCompile Include="02-10 string 시작주소.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
