멤버 변수를 초기화하는 문장, 입금되는 금액 출력

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="깊은복사_2106.cpp" />
+    <ClCompile Include="2번문제.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
