--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="깊은복사_2106.cpp">
+    <ClCompile Include="2번문제.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
