매개변수 없는 생성자

--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="04-01 연산자 오버로딩%28기본%29.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="2번문제.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
