--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="04-01 연산자 오버로딩%28기본%29.cpp" />
+    <ClCompile Include="04-01.cpp" />
     <ClCompile Include="2번문제.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
