--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="2번문제.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04-01.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
