--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="04-01.h" />
     <ClCompile Include="04-01 연산자 오버로딩%28기본%29.cpp" />
     <ClCompile Include="04-01.cpp" />
     <ClCompile Include="2번문제.cpp">
