--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="04-01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04-01.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
