--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -29,9 +29,13 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="04-02 연산자 오버로딩%28연습문제%29.cpp" />
+    <ClCompile Include="04-02.cpp" />
     <ClCompile Include="2번문제.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="04-02.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
