--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -30,5 +30,13 @@
     <ClCompile Include="04-02 연산자 오버로딩%28연습문제%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04-02.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="04-02.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
