--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="04-02.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04-03 대입연산자 오버로딩.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="04-02.h">
