상속 기본 예제

--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="04-03 대입연산자 오버로딩.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04-03 대입연산자.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="04-02.h">
