--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -36,7 +36,10 @@
     <ClCompile Include="04-03 대입연산자 오버로딩.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="04-03 대입연산자.cpp">
+    <ClCompile Include="04-03 상속.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="176페이지.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
