string 만들기(미완성)

--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="176페이지.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="00 - 1학기 수행평가3_학번이름.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="04-02.h">
