yg 클래스 구현(미완성)

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="00 - 1학기 수행평가3_학번이름.cpp" />
+    <ClCompile Include="00 - 1학기 수행평가3_학번이름.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="04-01.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
@@ -52,6 +54,8 @@
     <ClInclude Include="04-02.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="C:\Users\y1315\Downloads\00 - 클래스 설계.h" />
+    <ClInclude Include="YG.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
