Tiger 소멸자가 호출되지 않음

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="06-01 다형성기본.cpp" />
+    <ClCompile Include="06-02 virtual소멸자.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
