--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="06-01 다형성기본.cpp">
+    <ClCompile Include="06-02 virtual소멸자.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
