--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="06-03 순수가상함수.cpp">
+    <ClCompile Include="07-01 함수템플릿.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
