--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="07-01 함수템플릿.cpp">
+    <ClCompile Include="함수 템플릿 연습.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
