--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="함수 템플릿 연습.cpp" />
+    <ClCompile Include="07-02 클래스 템플릿.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
