이름, 체력, 공격, 방어(동적할당) -> 템플릿 수정 전

--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="07-02 클래스 템플릿.cpp">
+    <ClCompile Include="코드짜보기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
