이름, 체력, 공격, 방어 출력(동적할당) -> 템플릿 적용 전(수정)

--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="코드짜보기.cpp" />
+    <ClCompile Include="코드짜보기_템플릿 적용 전.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
