--- a/2022C++.vcxproj.filters
+++ b/2022C++.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="08-02 동적 배열.cpp">
+    <ClCompile Include="08-02 map.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
