--- a/2022C++.vcxproj
+++ b/2022C++.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="map 코드 짜보기.cpp" />
+    <ClCompile Include="09-01 enum.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
